# ToDo_core

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  entrypoint.sh  entrypoint_celery.sh  manage.py  pyproject.toml
common/: models.py
projects/: models.py
todo__core/: asgi.py  settings.py  urls.py  wsgi.py
todocore/: pytest.ini
todocore/common/: apps.py  config.py  event.py  exception.py  files_service.py  kafka_producers.py  logging_config.py  middleware.py  mixins.py  models.py  pagination.py  permissions.py  service.py  utils.py
todocore/common/containers/: client.py  configs.py
todocore/common/migrations/: 0001_initial.py  0002_user_auth_user_id.py
todocore/common/mixins/: celery_mixin.py  file_mixin.py
todocore/projects/: models.py
todocore/projects/api/: permissions.py  serializers.py  service.py
todocore/projects/api/v1/: filters.py  serializers.py  urls.py  views.py
todocore/projects/migrations/: 0001_initial.py  0002_project_logo_slug.py  0003_remove_project_logo_slug_project_logo_slugs.py
todocore/projects/tests/: conftest.py  test_entpoints.py
todocore/task/: models.py
todocore/task/api/: permissions.py  serializers.py  service.py  tasks.py
todocore/task/api/v1/: filters.py  urls.py  views.py
todocore/task/migrations/: 0001_initial.py  0002_alter_task_project.py  0003_task_file_slugs.py
todocore/task/tests/: conftest.py  test_endpoint.py
todocore/todo__core/: celery.py  settings.py  urls.py
